<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.kotlin.ekstremeat.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home">

        <action
            android:id="@+id/action_HomeFragment_to_HomeSecondFragment"
            app:destination="@id/nav_home_second" />
    </fragment>
    <fragment
        android:id="@+id/nav_home_second"
        android:name="com.kotlin.ekstremeat.ui.home.HomeSecondFragment"
        android:label="@string/home_second"
        tools:layout="@layout/fragment_home_second">
        <action
            android:id="@+id/action_HomeSecondFragment_to_HomeFragment"
            app:destination="@id/nav_home" />

        <argument
            android:name="myArg"
            app:argType="string" />
    </fragment>

    <fragment
        android:id="@+id/nav_menu"
        android:name="com.kotlin.ekstremeat.ui.menu.MenuFragment"
        android:label="@string/menu_category"
        tools:layout="@layout/fragment_category" />

    <fragment
        android:id="@+id/nav_food_detail"
        android:name="com.kotlin.ekstremeat.ui.fooddetail.FoodDetailFragment"
        android:label="@string/menu_food_detail"
        tools:layout="@layout/fragment_food_detail" />
    <fragment
        android:id="@+id/nav_food_lsit"
        android:name="com.kotlin.ekstremeat.ui.foodList.FoodListFragment"
        android:label="@string/menu_food_list"
        tools:layout="@layout/fragment_food_list" />
    <fragment
        android:id="@+id/commentFragment"
        android:name="com.kotlin.ekstremeat.ui.comment.CommentFragment"
        android:label="fragment_comment"
        tools:layout="@layout/fragment_comment" />
</navigation>